--- a/opensc-routers-bridge-dynamictexts/opensc-routers-bridge-dynamictexts.csproj
+++ b/opensc-routers-bridge-dynamictexts/opensc-routers-bridge-dynamictexts.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Model\Routers\DynamicTextFunctions\RouterOutputInputName.cs" />
     <Compile Include="Model\Routers\DynamicTextFunctions\RouterOutputSource.cs" />
+    <Compile Include="Modules\RoutersBridgeDynamictextsModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
