--- a/opensc-timers-bridge-dynamictexts/opensc-timers-bridge-dynamictexts.csproj
+++ b/opensc-timers-bridge-dynamictexts/opensc-timers-bridge-dynamictexts.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Model\Timers\DynamicTextFunctions\TimerHhMmSs.cs" />
     <Compile Include="Model\Timers\DynamicTextFunctions\TimerTotalMinutes.cs" />
     <Compile Include="Model\Timers\DynamicTextFunctions\TimerTotalSeconds.cs" />
+    <Compile Include="Modules\TimersBridgeDynamictextsModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
