Add declarations to subtype modules

--- a/opensc-core-model/opensc-core-model.csproj
+++ b/opensc-core-model/opensc-core-model.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Model\SystemObjectBase.cs" />
     <Compile Include="Model\TypeCodeAttribute.cs" />
     <Compile Include="Model\TypeLabelAttribute.cs" />
+    <Compile Include="Modules\SubtypeModelModuleBase.cs" />
     <Compile Include="Modules\BridgeModuleBase.cs" />
     <Compile Include="Modules\ModelModuleBase.cs" />
     <Compile Include="Modules\DependsOnModuleAttribute.cs" />
