--- a/opensc-streams-subtype-youtube-model/opensc-streams-subtype-youtube-model.csproj
+++ b/opensc-streams-subtype-youtube-model/opensc-streams-subtype-youtube-model.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Streams\YoutubeStream.cs" />
+    <Compile Include="Modules\StreamsSubtypeYoutubeModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
