--- a/opensc-vtrs-subtype-casparcg-model/opensc-vtrs-subtype-casparcg-model.csproj
+++ b/opensc-vtrs-subtype-casparcg-model/opensc-vtrs-subtype-casparcg-model.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Model\VTRs\CasparCgPlayout.cs" />
     <Compile Include="Model\VTRs\CasparCgPlayoutCommons.cs" />
+    <Compile Include="Modules\VtrsSubtypeCasparcgModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
