--- a/opensc-routers-subtype-leitch-model/opensc-routers-subtype-leitch-model.csproj
+++ b/opensc-routers-subtype-leitch-model/opensc-routers-subtype-leitch-model.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Model\Routers\Leitch\LeitchRouter.cs" />
     <Compile Include="Model\Routers\Leitch\LeitchRouterOutput.cs" />
     <Compile Include="Model\Routers\Leitch\LeitchRouterOutputXmlSerializer.cs" />
+    <Compile Include="Modules\RoutersSubtypeLeitchModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
