--- a/opensc-routers-subtype-virtual-model/opensc-routers-subtype-virtual-model.csproj
+++ b/opensc-routers-subtype-virtual-model/opensc-routers-subtype-virtual-model.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Model\Routers\Virtual\VirtualRouter.cs" />
     <Compile Include="Model\Routers\Virtual\VirtualRouterOutput.cs" />
     <Compile Include="Model\Routers\Virtual\VirtualRouterOutputXmlSerializer.cs" />
+    <Compile Include="Modules\RoutersSubtypeVirtualModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
