--- a/opensc-umds-subtype-tsl31-model/opensc-umds-subtype-tsl31-model.csproj
+++ b/opensc-umds-subtype-tsl31-model/opensc-umds-subtype-tsl31-model.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Model\UMDs\TSL31\TSL31.cs" />
     <Compile Include="Model\UMDs\TSL31\TSL31Type.cs" />
+    <Compile Include="Modules\UmdsSubtypeTsl31ModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
