--- a/opensc-core-gui/opensc-core-gui.csproj
+++ b/opensc-core-gui/opensc-core-gui.csproj
@@ -125,6 +125,9 @@
       <DependentUpon>ModelEditorFormBase.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\ModelEditorFormTypeRegister.cs" />
+    <Compile Include="Modules\SubtypeGuiModelModuleBase .cs" />
+    <Compile Include="Modules\BasetypeGuiModelModuleBase.cs" />
+    <Compile Include="Modules\GuiModuleBase.cs" />
     <Compile Include="GUI\Settings\IntSettingEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
