--- a/opensc-macropanels-gui/opensc-macropanels-gui.csproj
+++ b/opensc-macropanels-gui/opensc-macropanels-gui.csproj
@@ -67,6 +67,7 @@
     <Compile Include="GUI\Macros\MacroPanelList.Designer.cs">
       <DependentUpon>MacroPanelList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\MacropanelsGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
