--- a/opensc-tallycopying-gui/opensc-tallycopying-gui.csproj
+++ b/opensc-tallycopying-gui/opensc-tallycopying-gui.csproj
@@ -55,6 +55,7 @@
     <Compile Include="GUI\Signals\TallyCopy\TallyCopyList.Designer.cs">
       <DependentUpon>TallyCopyList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\TallycopyingGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
