--- a/opensc-vtrs-gui/opensc-vtrs-gui.csproj
+++ b/opensc-vtrs-gui/opensc-vtrs-gui.csproj
@@ -61,6 +61,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Icons.resx</DependentUpon>
     </Compile>
+    <Compile Include="Modules\VtrsGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
