--- a/opensc-labelsets-gui/opensc-labelsets-gui.csproj
+++ b/opensc-labelsets-gui/opensc-labelsets-gui.csproj
@@ -55,6 +55,7 @@
     <Compile Include="GUI\Routers\LabelsetList.Designer.cs">
       <DependentUpon>LabelsetList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\LabelsetsGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
