--- a/opensc-routermirrors-gui/opensc-routermirrors-gui.csproj
+++ b/opensc-routermirrors-gui/opensc-routermirrors-gui.csproj
@@ -55,6 +55,7 @@
     <Compile Include="GUI\Routers\Mirrors\RouterMirrorList.Designer.cs">
       <DependentUpon>RouterMirrorList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\RoutermirrorsGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
