--- a/opensc-routers-gui/opensc-routers-gui.csproj
+++ b/opensc-routers-gui/opensc-routers-gui.csproj
@@ -86,6 +86,7 @@
     <Compile Include="GUI\Routers\RouterOutputControl.Designer.cs">
       <DependentUpon>RouterOutputControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\RoutersGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
