--- a/opensc-routers-subtype-bmd-gui/opensc-routers-subtype-bmd-gui.csproj
+++ b/opensc-routers-subtype-bmd-gui/opensc-routers-subtype-bmd-gui.csproj
@@ -49,6 +49,7 @@
     <Compile Include="GUI\Routers\BmdVideohubEditorForm.Designer.cs">
       <DependentUpon>BmdVideohubEditorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\RoutersSubtypeBmdGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
