--- a/opensc-routers-subtype-leitch-gui/opensc-routers-subtype-leitch-gui.csproj
+++ b/opensc-routers-subtype-leitch-gui/opensc-routers-subtype-leitch-gui.csproj
@@ -49,6 +49,7 @@
     <Compile Include="GUI\Routers\LeitchRouterEditorForm.Designer.cs">
       <DependentUpon>LeitchRouterEditorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\RoutersSubtypeLeitchGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
