--- a/opensc-streams-subtype-youtube-gui/opensc-streams-subtype-youtube-gui.csproj
+++ b/opensc-streams-subtype-youtube-gui/opensc-streams-subtype-youtube-gui.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modules\StreamsSubtypeYoutubeGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GUI\Streams\YoutubeStreamEditorForm.cs">
       <SubType>Form</SubType>
