--- a/opensc-umds-gui/opensc-umds-gui.csproj
+++ b/opensc-umds-gui/opensc-umds-gui.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GUI\UMDs\UmdList.Designer.cs">
       <DependentUpon>UmdList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\UmdsGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
