--- a/opensc-mixers-model/opensc-mixers-model.csproj
+++ b/opensc-mixers-model/opensc-mixers-model.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Model\Mixers\MixerInputTallyBoolean.cs" />
     <Compile Include="Model\Mixers\MixerInputXmlSerializer.cs" />
     <Compile Include="Model\Mixers\MixerState.cs" />
-    <Compile Include="Model\Mixers\MixerTypeNameConverter.cs" />
+    <Compile Include="Model\Mixers\MixerTypeRegister.cs" />
     <Compile Include="Modules\MixersModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
