--- a/opensc-streams-model/opensc-streams-model.csproj
+++ b/opensc-streams-model/opensc-streams-model.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Model\Streams\Stream.cs" />
     <Compile Include="Model\Streams\StreamDatabase.cs" />
     <Compile Include="Model\Streams\StreamState.cs" />
-    <Compile Include="Model\Streams\StreamTypeNameConverter.cs" />
+    <Compile Include="Model\Streams\StreamTypeRegister.cs" />
     <Compile Include="Modules\StreamsModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
