--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -41,6 +41,7 @@
     <ProjectReference Include="..\opensc-routers-bridge-labelsets\opensc-routers-bridge-labelsets.csproj" />
     <ProjectReference Include="..\opensc-routers-bridge-macros\opensc-routers-bridge-macros.csproj" />
     <ProjectReference Include="..\opensc-routers-gui\opensc-routers-gui.csproj" />
+    <ProjectReference Include="..\opensc-routers-labelsets-bridge-dynamictexts\opensc-routers-labelsets-bridge-dynamictexts.csproj" />
     <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj" />
     <ProjectReference Include="..\opensc-routers-subtype-bmd-gui\opensc-routers-subtype-bmd-gui.csproj" />
     <ProjectReference Include="..\opensc-routers-subtype-bmd-model\opensc-routers-subtype-bmd-model.csproj" />
@@ -72,6 +73,8 @@
     <ProjectReference Include="..\opensc-umds-subtype-mccurdy-model\opensc-umds-subtype-mccurdy-model.csproj" />
     <ProjectReference Include="..\opensc-umds-subtype-tsl31-gui\opensc-umds-subtype-tsl31-gui.csproj" />
     <ProjectReference Include="..\opensc-umds-subtype-tsl31-model\opensc-umds-subtype-tsl31-model.csproj" />
+    <ProjectReference Include="..\opensc-umds-subtype-tsl50-gui\opensc-umds-subtype-tsl50-gui.csproj" />
+    <ProjectReference Include="..\opensc-umds-subtype-tsl50-model\opensc-umds-subtype-tsl50-model.csproj" />
     <ProjectReference Include="..\opensc-vtrs-bridge-dynamictexts\opensc-vtrs-bridge-dynamictexts.csproj" />
     <ProjectReference Include="..\opensc-vtrs-gui\opensc-vtrs-gui.csproj" />
     <ProjectReference Include="..\opensc-vtrs-model\opensc-vtrs-model.csproj" />
