--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -68,6 +68,7 @@
     <ProjectReference Include="..\opensc-umds-bridge-macros\opensc-umds-bridge-macros.csproj" />
     <ProjectReference Include="..\opensc-umds-gui\opensc-umds-gui.csproj" />
     <ProjectReference Include="..\opensc-umds-model\opensc-umds-model.csproj" />
+    <ProjectReference Include="..\opensc-umds-subtype-bmdatem-model\opensc-umds-subtype-bmdatem-model.csproj" />
     <ProjectReference Include="..\opensc-umds-subtype-mccurdy-gui\opensc-umds-subtype-mccurdy-gui.csproj" />
     <ProjectReference Include="..\opensc-umds-subtype-mccurdy-model\opensc-umds-subtype-mccurdy-model.csproj" />
     <ProjectReference Include="..\opensc-umds-subtype-tsl31-gui\opensc-umds-subtype-tsl31-gui.csproj" />
