--- a/opensc-labelsets-gui/opensc-labelsets-gui.csproj
+++ b/opensc-labelsets-gui/opensc-labelsets-gui.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="GUI\Labelsets\AllLabelsetEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
 </Project>
