--- a/opensc-routers-subtype-virtual-gui/opensc-routers-subtype-virtual-gui.csproj
+++ b/opensc-routers-subtype-virtual-gui/opensc-routers-subtype-virtual-gui.csproj
@@ -18,4 +18,5 @@
     <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj" />
     <ProjectReference Include="..\opensc-routers-subtype-virtual-model\opensc-routers-subtype-virtual-model.csproj" />
   </ItemGroup>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
