--- a/opensc-salvos-gui/opensc-salvos-gui.csproj
+++ b/opensc-salvos-gui/opensc-salvos-gui.csproj
@@ -1,16 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj" />
     <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
     <ProjectReference Include="..\opensc-salvos-model\opensc-salvos-model.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="GUI\Routers\Salvos\SalvoList.cs">
       <SubType>Form</SubType>
@@ -19,5 +16,5 @@
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
-
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
