--- a/opensc-streams-subtype-youtube-model/opensc-streams-subtype-youtube-model.csproj
+++ b/opensc-streams-subtype-youtube-model/opensc-streams-subtype-youtube-model.csproj
@@ -16,4 +16,5 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
