--- a/opensc-wallpaper-gui/opensc-wallpaper-gui.csproj
+++ b/opensc-wallpaper-gui/opensc-wallpaper-gui.csproj
@@ -1,14 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <OutputType>Library</OutputType>
     <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj" />
     <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
   </ItemGroup>
-
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
