--- a/opensc-macros-gui/opensc-macros-gui.csproj
+++ b/opensc-macros-gui/opensc-macros-gui.csproj
@@ -24,4 +24,5 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
