--- a/opensc-serialports-model/opensc-serialports-model.csproj
+++ b/opensc-serialports-model/opensc-serialports-model.csproj
@@ -13,4 +13,5 @@
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.IO.Ports" Version="5.0.1" />
   </ItemGroup>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
