--- a/opensc-umds-subtype-tsl50-gui/opensc-umds-subtype-tsl50-gui.csproj
+++ b/opensc-umds-subtype-tsl50-gui/opensc-umds-subtype-tsl50-gui.csproj
@@ -1,17 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0-windows7.0</TargetFramework>
     <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj" />
     <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
     <ProjectReference Include="..\opensc-umds-gui\opensc-umds-gui.csproj" />
     <ProjectReference Include="..\opensc-umds-subtype-tsl50-model\opensc-umds-subtype-tsl50-model.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="GUI\UMDs\Tsl50ScreenEditorForm.cs">
       <SubType>Form</SubType>
@@ -23,5 +20,5 @@
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
-
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
