--- a/opensc-vtrs-gui/opensc-vtrs-gui.csproj
+++ b/opensc-vtrs-gui/opensc-vtrs-gui.csproj
@@ -29,4 +29,5 @@
       <LastGenOutput>Icons.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
