Rename some things around MIDI controllers

--- a/opensc-midicontrollers-bridge-macros/opensc-midicontrollers-bridge-macros.csproj
+++ b/opensc-midicontrollers-bridge-macros/opensc-midicontrollers-bridge-macros.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
-    <ProjectReference Include="..\opensc-midi-model\opensc-midi-model.csproj" />
+    <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj" />
     <ProjectReference Include="..\opensc-macros-model\opensc-macros-model.csproj" />
   </ItemGroup>
   <Import Project="..\GlobalCsproj\*.csproj" />
